# go-ethereum

./: .gitignore  README.md  clean_tfhe_rs_api.sh  go.mod  install_thfe_rs_api.sh
.github/workflows/: github-actions-demo.yml  publish_geth_testing.yml
core/: state_transition.go
core/vm/: common.go  contracts.go  contracts_stateful.go  contracts_test.go  evm.go  instructions.go  instructions_test.go  interpreter.go  interpreter_test.go  operations_acl.go  tfhe.go  tfhe.h  tfhe_test.go
core/vm/lib/: tfhe.h
crypto/: crypto.go
params/: protocol_params.go
rpc/: http.go
tests/solidity/zama/: create2.sol  handles.sol
tfhe/: Makefile  go.mod  lib.go  tfheCipherText.go
tfhe/builder/: Dockerfile.alpine
tfhe/builder/guest/: build_muslc.sh  cargo-config
tfhe/cmd/: main.go
tfhe/internal/api/: bindings.h  lib.go  link_glibclinux_x86_64.go  link_muslc.go  memory.go  tfhe.go  version.go
tfhe/libtfhe-wrapper/: Cargo.toml  cbindgen.toml  rust-toolchain
tfhe/libtfhe-wrapper/src/: api.rs  error.rs  keys.rs  lib.rs  math.rs  memory.rs  stuff.h  stuff.rs  version.rs
tfhe/scripts/: build_alpine.sh
